Barre menu de navigation

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,267 @@
-p {
-    color:black;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    
 }
+
+html{
+    font-family:Roboto;
+    font-size: 16px;
+    color: #333;
+    
+}
+
+body{
+    font-family: 'Archivo Narrow', sans-serif;
+}
+
+:root{
+    --orange:#e7462d;
+}
+
+#conteneur{
+    display:flex;
+    background-color: var(--orange);
+    color: rgb(255, 255, 255);
+    align-items: center;
+    height: 75px;
+    box-shadow: 0 14px 14px rgb(0 0 0 / 5%), 0 6px 6px rgb(0 0 0 / 15%);
+    font-size: 24px;
+  }
+  
+.conteneur-left{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    height: 78px;
+    flex: 1;
+    padding-left: 10%;  
+  }
+
+  
+.conteneur-menu{
+    display: flex;
+    justify-content: space-around;
+   
+  }
+
+  
+  * {
+    box-sizing: border-box;
+  }
+  ul {
+    margin: 0;
+    padding: 0;
+  }
+  li {
+    list-style: none;
+  }
+  
+  .mega-menu a {
+    display: block;
+    color: bla;
+    text-decoration: none;
+  }
+  
+  
+  .mega-menu-main {
+    display: flex;
+    position: relative;
+    
+  }
+  
+  .lvl-0 > a {
+    padding: 12px 25px;
+  }
+
+  .lvl-0:hover > ul {
+    display: flex;
+  }
+  
+  .mega-menu-tab {
+    display: none;
+    /*display: flex;*/
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    background: #ffffff;
+  }
+
+  .mega-menu-tab a{
+    color: black;
+  }
+
+  .mega-menu-main .lvl-1 h2{
+    color:black ;
+  }
+
+
+  .lvl-1 {
+    flex: 1;
+    width: 100%;
+    margin: 0 15px;
+  }
+  .lvl-1 h2 {
+    margin: 0;
+    padding: 0;
+    color: white;
+  }
+  
+  .lvl-2 {
+    padding-top: 15px;
+  }
+  .lvl-2 a {
+    padding: 8px 0;
+  }
+
+li{
+    margin-right: 30px;
+    list-style:none;
+  }
+
+li a {
+    text-decoration: none;
+    color: inherit;
+}
+
+
+.logo1{
+    display: flex;
+}
+
+.logo {
+    width: 50px;
+    display: flex;
+    text-align: center;
+    margin-right: 30px;
+
+}
+
+
+/* CSS des boutons Build Creator/ Login */
+
+.conteneur-right{
+  padding-right: 10%;
+  font-size: 18px;
+}
+
+.btn1{
+    color: var(--orange);
+    background-color: white;
+    border: solid 1px white;
+    border-radius: 8px;
+    padding:10px;
+    box-shadow: 0 14px 14px rgb(0 0 0 / 5%), 0 6px 6px rgb(0 0 0 / 15%);;
+    text-decoration: none;
+    margin-right: 10px;
+    font-weight: 500;
+    letter-spacing: 1px ;
+}
+
+.btn1:hover{
+    box-shadow: 0 14px 14px rgb(0 0 0 / 15%), 0 6px 6px rgb(0 0 0 / 15%);;
+}
+
+
+.btn2{
+    color: white;
+    background-color: var(--orange);
+    border: solid 1px white;
+    border-radius: 8px;
+    padding: 10px;
+    text-decoration: none;
+    font-weight: 500;
+    letter-spacing: 1px ;
+}
+.btn2:hover{
+    color: var(--orange);
+    background-color: white;
+    border: solid 1px white;
+    box-shadow: 0 14px 14px rgb(0 0 0 / 5%), 0 6px 6px rgb(0 0 0 / 15%);
+    transition-delay: 30ms;
+    
+}
+
+
+/* CCS pour l'animation du logo*/
+
+.bouncing {
+  animation : rubberband 800ms alternate ease-out;
+}
+
+  @keyframes rubberband {
+      0%{
+          transform: scaleX(1);
+      }
+      40%{
+          transform: scaleX(1.12) scaleY(0.75);
+      }
+      55%{
+          transform: scaleX(0.85) scaleY(1);
+      }
+      65%{
+          transform: scaleX(1.09) scaleY(0.85);
+      }
+      75%{
+          transform: scaleX(0.9)  scaleY(1);
+      }
+      90%{
+          transform: scaleX(1.05) scaleY(0.95);
+      }
+      100%{
+          transform: scaleX(1) scaleY(1);
+      }
+  }
+
+/*Section BODY Carrousel */
+
+#conteneur-body{
+  padding-left: 10%;
+  padding-right: 10%;
+  padding-top: 50px;
+}
+
+#essential h3{
+  font-size: 26px;
+  font-weight: 600;
+}
+
+#essential p{
+  color: rgba(79, 78, 78, 0.678);
+}
+
+.espace-p{
+  margin-top: 10px;
+}
+
+.carrousel{
+  display: flex;
+  margin-top: 10px;
+  align-items: center;
+  
+}
+
+.BO{
+  padding: 10px;
+  border: 1px solid #333;
+  border-radius: 8px;
+  margin-left: 10px;
+}
+
+.BO:hover{
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+.BO span{
+  font-size: 20px;
+}
+
+.BO a{
+  text-decoration: none;
+}
+
+
+
+
